--- a/OC/Kexts/AppleALC.kext/Contents/Info.plist
+++ b/OC/Kexts/AppleALC.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18E226</string>
+	<string>19C57</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.4.6</string>
+	<string>1.4.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,21 +25,21 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.4.6</string>
+	<string>1.4.5</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10E1001</string>
+	<string>11C29</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>18E219</string>
+	<string>19B90</string>
 	<key>DTSDKName</key>
-	<string>macosx10.14</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1020</string>
+	<string>1130</string>
 	<key>DTXcodeBuild</key>
-	<string>10E1001</string>
+	<string>11C29</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>HDA Hardware Config Resource</key>
@@ -48,6 +48,36 @@
 			<string>com.apple.driver.AppleHDAHardwareConfigDriver</string>
 			<key>HDAConfigDefault</key>
 			<array>
+				<dict>
+					<key>AFGLowPowerState</key>
+					<data>
+					AwAAAA==
+					</data>
+					<key>CodecID</key>
+					<integer>283902610</integer>
+					<key>Comment</key>
+					<string>baesar0 -ALC 292 for e6540 with dock</string>
+					<key>ConfigData</key>
+					<data>
+					ASccEAEnHQEBJx6mAScfkAE3HPABNx0AATce
+					AAE3H0ABRxxAAUcdAQFHHhcBRx+QAUcMAgFX
+					HFABVx1AAVceKwFXHwIBVwwCAWccgAFnHUAB
+					Zx4BAWcfAgFnDAIBhxzwAYcdAAGHHgABhx9A
+					AZccIAGXHZABlx6BAZcfAgGnHHABpx0QAace
+					qwGnHwIBtxzwAbcdAAG3HgABtx9AAdcc8AHX
+					HQAB1x4AAdcfQAHnHPAB5x0AAeceAAHnH0A=
+					</data>
+					<key>FuncGroup</key>
+					<integer>1</integer>
+					<key>LayoutID</key>
+					<integer>55</integer>
+					<key>WakeConfigData</key>
+					<data>
+					AUcMAg==
+					</data>
+					<key>WakeVerbReinit</key>
+					<true/>
+				</dict>
 				<dict>
 					<key>AFGLowPowerState</key>
 					<data>
@@ -589,32 +619,6 @@
 					<integer>1</integer>
 					<key>LayoutID</key>
 					<integer>7</integer>
-				</dict>
-				<dict>
-					<key>AFGLowPowerState</key>
-					<data>
-					AwAAAA==
-					</data>
-					<key>Codec</key>
-					<string>ALC215 for HP 830 G6 for 965987400abc</string>
-					<key>CodecID</key>
-					<integer>283902485</integer>
-					<key>ConfigData</key>
-					<data>
-					AUccEAFHHQEBRx4XAUcfmQIXHCACFx0QAhce
-					IQIXHwECFwwCASccMAEnHRgBJx6BAScfAQGX
-					HEABlx0BAZcepgGXH5kBRwwC
-					</data>
-					<key>FuncGroup</key>
-					<integer>1</integer>
-					<key>LayoutID</key>
-					<integer>18</integer>
-					<key>WakeConfigData</key>
-					<data>
-					AUcMAg==
-					</data>
-					<key>WakeVerbReinit</key>
-					<true/>
 				</dict>
 				<dict>
 					<key>AFGLowPowerState</key>
@@ -1184,32 +1188,6 @@
 					<integer>1</integer>
 					<key>LayoutID</key>
 					<integer>15</integer>
-					<key>WakeVerbReinit</key>
-					<true/>
-				</dict>
-				<dict>
-					<key>AFGLowPowerState</key>
-					<data>
-					AwAAAA==
-					</data>
-					<key>Codec</key>
-					<string>MacPeet - Realtek ALC235 for ASUS GL553VD</string>
-					<key>CodecID</key>
-					<integer>283902517</integer>
-					<key>ConfigData</key>
-					<data>
-					AhccIAIXHRACFx4rAhcfAAG3HDABtx0AAbce
-					pwG3H5ABlxwwAZcdEAGXHosBlx8BAUccQAFH
-					HQABRx4XAUcfkAFHDAI=
-					</data>
-					<key>FuncGroup</key>
-					<integer>1</integer>
-					<key>LayoutID</key>
-					<integer>16</integer>
-					<key>WakeConfigData</key>
-					<data>
-					AUcMAg==
-					</data>
 					<key>WakeVerbReinit</key>
 					<true/>
 				</dict>
@@ -2237,6 +2215,32 @@
 					<integer>1</integer>
 					<key>LayoutID</key>
 					<integer>18</integer>
+					<key>WakeConfigData</key>
+					<data>
+					AUcMAg==
+					</data>
+					<key>WakeVerbReinit</key>
+					<true/>
+				</dict>
+				<dict>
+					<key>AFGLowPowerState</key>
+					<data>
+					AwAAAA==
+					</data>
+					<key>Codec</key>
+					<string>Realtek ALC257 for Lenovo XiaoXin Pro 2019(81XB/81XD) by DalianSky</string>
+					<key>CodecID</key>
+					<integer>283902551</integer>
+					<key>ConfigData</key>
+					<data>
+					ASccMAEnHQEBJx6mAScfkAIXHCACFx0QAhce
+					IQIXHwQBlxxAAZcdEAGXHoEBlx8EAUccEAFH
+					HQEBRx4XAUcfkAFHDAI=
+					</data>
+					<key>FuncGroup</key>
+					<integer>1</integer>
+					<key>LayoutID</key>
+					<integer>99</integer>
 					<key>WakeConfigData</key>
 					<data>
 					AUcMAg==
@@ -4985,36 +4989,6 @@
 					<data>
 					AwAAAA==
 					</data>
-					<key>CodecID</key>
-					<integer>283902610</integer>
-					<key>Comment</key>
-					<string>baesar0 -ALC 292 for e6540 with dock</string>
-					<key>ConfigData</key>
-					<data>
-					ASccEAEnHQEBJx6mAScfkAE3HPABNx0AATce
-					AAE3H0ABRxxAAUcdAQFHHhcBRx+QAUcMAgFX
-					HFABVx1AAVceKwFXHwIBVwwCAWccgAFnHUAB
-					Zx4BAWcfAgFnDAIBhxzwAYcdAAGHHgABhx9A
-					AZccIAGXHZABlx6BAZcfAgGnHHABpx0QAace
-					qwGnHwIBtxzwAbcdAAG3HgABtx9AAdcc8AHX
-					HQAB1x4AAdcfQAHnHPAB5x0AAeceAAHnH0A=
-					</data>
-					<key>FuncGroup</key>
-					<integer>1</integer>
-					<key>LayoutID</key>
-					<integer>55</integer>
-					<key>WakeConfigData</key>
-					<data>
-					AUcMAg==
-					</data>
-					<key>WakeVerbReinit</key>
-					<true/>
-				</dict>
-				<dict>
-					<key>AFGLowPowerState</key>
-					<data>
-					AwAAAA==
-					</data>
 					<key>Codec</key>
 					<string>ALC293 Dell E7450 by Andres ZeroCross</string>
 					<key>CodecID</key>
@@ -6385,7 +6359,7 @@
 					<integer>283903744</integer>
 					<key>ConfigData</key>
 					<data>
-					AZceYQGXByUBtx4R
+					AZceYQGXByU=
 					</data>
 					<key>FuncGroup</key>
 					<integer>1</integer>
@@ -10807,6 +10781,8 @@
 			<string>IOKit</string>
 		</dict>
 	</dict>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.8</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017 vit9696. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
