--- a/EFI/OC/config-DVMT64.plist
+++ b/EFI/OC/config-DVMT64.plist
@@ -50,7 +50,7 @@
 				<key>Comment</key>
 				<string>I2C Bus Config</string>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>Path</key>
 				<string>SSDT-I2CxConf.aml</string>
 			</dict>
@@ -352,7 +352,7 @@
 				<key>Count</key>
 				<integer>0</integer>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>Find</key>
 				<data>
 				U1NDTg==
@@ -386,7 +386,7 @@
 				<key>Count</key>
 				<integer>0</integer>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>Find</key>
 				<data>
 				Rk1DTg==
@@ -1107,9 +1107,9 @@
 			<key>AppleCpuPmCfgLock</key>
 			<false/>
 			<key>AppleXcpmCfgLock</key>
-			<true/>
-			<key>AppleXcpmExtraMsrs</key>
 			<false/>
+			<key>AppleXcpmExtraMsrs</key>
+			<true/>
 			<key>AppleXcpmForceBoost</key>
 			<false/>
 			<key>CustomSMBIOSGuid</key>
